1.23cvs

* Show parameters on call

* Some doc fixes.

* add ipython command to go into an ipython shell

* add "save" command to save the current breakpoints to a file.

* pseudo gdb-like "annotate" set/show commands and option.

* Better emacs interactivion via above annotate

* bug when "info local" is run inside a "with" statement

  Fixes for last three items based patches by Alberto Griggio

1.22 2007-04-15

* Add function tracing and option -F.

* Call and return trace lines show nesting level. Return will show the
  value if it is a scalar or string type or return type otherwise.

* Make pydb.el work on Emacs 22 and 23. (was previously just 21).
  Better emacs tolerance on MS Windows.

* fix bug in "info thread" when threadframe is not installed (and
  python < 2.5).

* Better ipython interaction.

* pm distinquishes now where an exception rolled back to versus where
  the exception occurred.

* BSD Make tolerance

1.21 2007-02-13

* pydb script will do a path search to find a script, same as gdb.
  If compiled Python script is given, we try to find the non-compiled
  equivalent.

* 'help' command now allows an expression and runs Python's builtin help
  command (pydoc). Add pydoc command to call pydoc externally.

* Make prompt string detection in Emacs pydb-track more MS-friendly.
  Add a unit test for the Emacs interface.

* Allow lowercase signal names, e.g. "int" or "sigint" for "SIGINT".

* disassemble command allows for a start line and end line to limit
  disassembly, same as gdb. Due to these changes, we now require at least 
  Python 2.4.0.

* Allow limited expressions many places an int parameter is used in
  a debugger command

* Allow "info thread" always. That is we don't need --threading for this

* signal command's output more like gdb's.

* Add pydoc's help (i.e. python's built-in help) to debugger "help"
  command

* Add "set"/"show" option to force debugger output to be flushed on
  write.
