@@ -11,3 +11,5 @@ Number of source lines pydb will list by default is 10.
 Number of lines to show in listing is 60.
 Saving of the history record on exit is off
 The size of the command history is 100
+deftrace is off.
+deftrace is on.
